--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,28 @@
 services:
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    container_name: nginx-proxy
+    restart: unless-stopped
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./favicon.ico:/usr/share/nginx/html/favicon.ico:ro
+      - ./favicon.png:/usr/share/nginx/html/favicon.png:ro
+    depends_on:
+      - ttyd-krayon
+    networks:
+      - app-network
+
   ttyd-krayon:
     build: .
-    ports:
-      - "7681:7681"
+    expose:
+      - "7681"
     container_name: ttyd-krayon
     restart: unless-stopped
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
