--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,14 @@ services:
     image: nginx:alpine
     ports:
       - "80:80"
+      - "443:443"
     container_name: nginx-proxy
     restart: unless-stopped
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./favicon.ico:/usr/share/nginx/html/favicon.ico:ro
       - ./favicon.png:/usr/share/nginx/html/favicon.png:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro # SSL certificates
     depends_on:
       - ttyd-krayon
     networks:
@@ -22,6 +24,14 @@ services:
     restart: unless-stopped
     networks:
       - app-network
+
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - /etc/letsencrypt:/etc/letsencrypt
+      - /var/lib/letsencrypt:/var/lib/letsencrypt
+    command: certonly --webroot --webroot-path=/var/www/html --email your-email@example.com --agree-tos --no-eff-email -d krayon.dev -d www.krayon.dev
 
 networks:
   app-network:
