--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   reverse-proxy:
-    image: traefik:v3.1
+    image: traefik:latest
     command:
       - "--providers.docker"
       - "--providers.docker.exposedbydefault=false"
